styling changes to prevent zooming on small devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,7 @@
 .h {
   font-size: 32px;
 }
+
+.mat-card-content {
+  font-size: 16px;
+}
