--- a/src/app/component/content/content.component.scss
+++ b/src/app/component/content/content.component.scss
@@ -44,8 +44,8 @@
 }
 
 .app-card {
-  min-width: 400px;
-  min-height: 365px;
+  min-width: 380px;
+  min-height: 356px;
 }
 
 .app-fab {
